# glitter

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
.circleci/: config.yml
glitter-0.0/src/: dsint.h  glitter.pc.in
m4/: doxygen.cfg
src/: Makefile.am  dsint.h  etry.h  glitter.c  glitter.h
